--- a/apps/panel/src/app/modules/support/pages/details-support/details-support.component.html
+++ b/apps/panel/src/app/modules/support/pages/details-support/details-support.component.html
@@ -37,16 +37,16 @@
       <div class="col-xl-6 col-lg-6 col-md-12">
         <div class="pb-2">
           <h6 class="font-weight-bold">
-            {{ "SUPPORT.TICKET_INFO" | translate }}
+            {{ 'SUPPORT.TICKET_INFO' | translate }}
           </h6>
         </div>
 
         <div class="form-group">
-          <span> {{ "SUPPORT.CODE_TICKET" | translate }}</span>
+          <span> {{ 'SUPPORT.CODE_TICKET' | translate }}</span>
           <span class="font-weight-bold"> {{ data.hash }}</span>
         </div>
         <div class="form-group">
-          <span>{{ "SUPPORT.CODE_RESERVATION" | translate }} </span>
+          <span>{{ 'SUPPORT.CODE_RESERVATION' | translate }} </span>
           <span class="font-weight-bold"> {{ data.codeReservation }}</span>
         </div>
         <!-- <div class="form-group">
@@ -54,14 +54,14 @@
           <span class="font-weight-bold"> Aqui va el ng select</span>
         </div> -->
         <div class="form-group">
-          <span>{{ "SUPPORT.TOUR" | translate }} </span>
+          <span>{{ 'SUPPORT.TOUR' | translate }} </span>
           <span class="font-weight-bold"> {{ customData.tourTitle }}</span>
         </div>
         <div class="form-group">
-          <span>{{ "SUPPORT.START_DATE" | translate }} </span>
+          <span>{{ 'SUPPORT.START_DATE' | translate }} </span>
           <span class="font-weight-bold">
             {{
-              customData.StartDate | datesFormatDeparture | date: "MMM dd, YYYY"
+              customData.StartDate | datesFormatDeparture | date: 'MMM dd, YYYY'
             }}</span
           >
         </div>
@@ -69,16 +69,16 @@
       <div class="col-xl-6 col-lg-6 col-md-12">
         <div class="pb-2">
           <h6 class="font-weight-bold">
-            {{ "SUPPORT.TRAVELER_INFO" | translate }}
+            {{ 'SUPPORT.TRAVELER_INFO' | translate }}
           </h6>
         </div>
 
         <div class="form-group">
-          <span>{{ "SUPPORT.TRAVELER" | translate }} </span>
+          <span>{{ 'SUPPORT.TRAVELER' | translate }} </span>
           <span class="font-weight-bold"> {{ travelerName() }}</span>
         </div>
         <div class="form-group">
-          <span>{{ "SUPPORT.EMAIL" | translate }} </span>
+          <span>{{ 'SUPPORT.EMAIL' | translate }} </span>
           <span class="font-weight-bold"> {{ customData.travelerEmail }}</span>
         </div>
       </div>
@@ -90,12 +90,12 @@
 <ng-template #loadingRef let-loading="loading">
   <div
     class="w-100 loading-wrap animate__animated animate__fadeIn"
-    *ngIf="loading == true"
+    *ngIf="loading"
   >
     <div class="in">
       <img class="circle" src="/assets/loading.svg" alt="loading" />
       <div>
-        <small>{{ "GENERAL.LOADING" | translate }}</small>
+        <small>{{ 'GENERAL.LOADING' | translate }}</small>
       </div>
     </div>
   </div>
@@ -111,7 +111,7 @@
         alt="loading"
       />
       <div>
-        <small>{{ "GENERAL.ERROR" | translate }}</small>
+        <small>{{ 'GENERAL.ERROR' | translate }}</small>
       </div>
     </div>
   </div>
